--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,8 +6,7 @@ FROM python:3.10-slim
 # --- ADD THIS SECTION ---
 # Install system dependencies required by OpenCV
 RUN apt-get update && apt-get install -y \
-    libgl1-mesa-glx \
-    libglib2.0-0 \
+    libgl1 \
     && rm -rf /var/lib/apt/lists/*
 # libgl1-mesa-glx provides libGL.so.1
 # libglib2.0-0 is another common dependency for OpenCV
