--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -29,5 +29,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy the rest of the application code
 COPY . .
 
+COPY models/ models/
+
+
 # Command to run the application
 CMD gunicorn -w 2 -k uvicorn.workers.UvicornWorker main:app --bind 0.0.0.0:${PORT}
